syntax = "proto3";

package tech.monstrs.chats_system.updates.v1alpha1;

service UpdatesService {
  rpc GetState(GetStateRequest) returns (GetStateResponse) {}
}

message State {
  int32 pts = 1;
  int32 qts = 2;
  int32 date = 3;
  int32 seq = 4;
  int32 unread_count = 5;
}

message GetStateRequest {
  int64 auth_key_id = 1;
  int64 user_id = 2;
}

message GetStateResponse {
  State state = 1;
}
